# pandoc-gui-mk2

./: .gitignore  .mermaid-config.json  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  test-smoke.html
.github/workflows/: build-packages.yml  release.yml
scripts/: prepare-bundled-pandoc.ps1  prepare-bundled-tectonic.ps1
src/: command-utils.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
test/: command-utils.test.js  pandoc-integration.test.js  run-tests.js
test/fixtures/: sample.md
