[package]
name = "pandoc-gui"
version = "2.1.2"
description = "GUI for Pandoc document converter"
authors = ["Pandoc GUI Team"]
license = "MIT"
repository = "https://github.com/ivg/pandoc-gui-mk2"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2.5"
tauri-plugin-shell = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-http = "2.2"
open = "5"
dirs = "5"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
lazy_static = "1.4"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
encoding_rs = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_Shell"] }
